[package]
name = "icp-bitcoin-ai-backend-rust-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-timers = "0.7"
ic-cdk-macros = "0.6.0"
ic-stable-memory = "0.4"
serde = "1.0.204"
serde_json = "1.0.120"
serde_bytes = "0.11.9"
