[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.9"
ic-cdk = "0.15.0"
ic-cdk-macros = "0.15.0"
ic-sqlite = "0.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
